del name rules
